objects/Article_Feedback__c.object
<CustomObject>
    <description>Used to capture actionable feedback on articles in conjunction with Chatter (FeedItem trigger)</description>
    <fields>
        <fullName>Answers_URL__c</fullName>
        <description>MW Answers URL</description>
        <label>Answers URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Article_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that authored the current published article</description>
        <label>Article Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article_Feedback_Report__c</fullName>
        <formula>HYPERLINK(&quot;00Oe0000000WyHO&quot;, &quot;Link to Overall Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Feedback Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_ID__c</fullName>
        <description>Displays the article ID</description>
        <label>Article ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <description>A link to the Article the feedback is about</description>
        <inlineHelpText>Click the link to be taken directly to the article</inlineHelpText>
        <label>Article Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <description>Article Number</description>
        <label>Article Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <description>Displays the title of a Knowledge Article</description>
        <inlineHelpText>Title of the related Article</inlineHelpText>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Version__c</fullName>
        <description>Displays the version number of the article that the feedback is related to</description>
        <inlineHelpText>Displays the version number of the article that the feedback is related to</inlineHelpText>
        <label>Article Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Author_User__c</fullName>
        <formula>IF (Article_Author__r.Username = $User.Username, &quot;My&quot;, &quot;Not My&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author &amp; User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentsBy__c</fullName>
        <description>Feedback owner emailid</description>
        <label>Comments  By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>comment about article entered by a user via chatter post</description>
        <inlineHelpText>comment about article entered by a user via chatter post</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feed_Id__c</fullName>
        <label>Feed Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Status__c</fullName>
        <description>Used to identify the status or stage of article feedback</description>
        <inlineHelpText>Select the status or stage this feedback is currently in.  Used in reporting</inlineHelpText>
        <label>Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Article language code</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_OS_Group__c</fullName>
        <label>Platform &amp; OS Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Group__c</fullName>
        <label>Topic Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Group__c</fullName>
        <label>Type Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_in_Release_Group__c</fullName>
        <label>Verified in Release Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Article Feedback</label>
    <listViews>
        <fullName>All_Article_Feedback</fullName>
        <columns>Comments__c</columns>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Topic_Group__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Article_Author__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Article_Link__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Article Feedback</label>
    </listViews>
    <listViews>
        <fullName>All_Open_CS</fullName>
        <booleanFilter>1 AND ( 2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Link__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Comments__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Rejected</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>All_Customer_Support,Account_Contact,Activation_CS,Billing_Orders</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Customer_Training,Database_Lookup,General_Information,Installation_Downloads</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>License_Association,License_Modification,MathWorks_Account,Passcodes</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Student_Version</value>
        </filters>
        <label>All Open CS</label>
        <sharedTo>
            <role>MW_Customer_Support_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Install</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Link__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Comments__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Rejected</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Download,Activation_Install,License_Management,Installation,MATLAB_Desktop_and_E</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>All_Install</value>
        </filters>
        <label>All Open Install</label>
        <sharedTo>
            <role>MW_Customer_Support_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Tech_Supp</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Article_Author__c</columns>
        <columns>Author_User__c</columns>
        <columns>Comments__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Topic_Group__c</columns>
        <columns>Verified_in_Release_Group__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>notEqual</operation>
            <value>Activation_Install</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>notContain</operation>
            <value>All_Install,MATLAB_Desktop_and_Environment</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>notContain</operation>
            <value>License_Association,License_Modification,MathWorks_Account,Passcodes</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>notContain</operation>
            <value>Student_Version</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>notContain</operation>
            <value>Customer_Training,Database_Lookup,General_Information,Installation_Downloads</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>notContain</operation>
            <value>All_Customer_Support,Account_Contact,Activation_CS,Billing_Orders</value>
        </filters>
        <label>All Open Tech Support</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MW_Tech_Support_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_CDA_SPC</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>Article_ID__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Comments__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Topic_Group__c</columns>
        <columns>Verified_in_Release_Group__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Code_Generation,Component_Based_Modeling,Control_System_Design_and_Analysis</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Event_Based_Modeling,Signal_Processing_and_Communication,Simulink_Block_Creation</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Simulink_Modeling,Simulink_Physical_Modeling</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Simulink_Simulation_and_Visualization</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>External_Hardware,Image_Processing_and_Computer_Vision,Parallel_Computing</value>
        </filters>
        <label>All Unassigned CDA/SPC</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MW_Development_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_CS</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Link__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Comments__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>All_Customer_Support,Account_Contact,Activation_CS,Billing_Orders</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Customer_Training,Database_Lookup,General_Information,Installation_Downloads</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>License_Association,License_Modification,MathWorks_Account,Passcodes</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Student_Version</value>
        </filters>
        <label>All Unassigned CS</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MW_Customer_Support_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_DTA</fullName>
        <booleanFilter>1 AND ( 2 OR 3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Article_ID__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Author_User__c</columns>
        <columns>Comments__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Topic_Group__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Verified_in_Release_Group__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Data_Import_and_Export,Database_Connectivity,Deployment,External_Hardware</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>MEX_and_External_Language_Interfaces,Object_Oriented_Programming</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Parallel_Computing</value>
        </filters>
        <label>All Unassigned DTA</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MW_Tech_Support_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_Install</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Link__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Comments__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Download,Activation_Install,License_Management,Installation,MATLAB_Desktop_and_E</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>All_Install</value>
        </filters>
        <label>All Unassigned Install</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MW_Customer_Support_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_ML_Math</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 )</booleanFilter>
        <columns>NAME</columns>
        <columns>Topic_Group__c</columns>
        <columns>Article_Link__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Comments__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Verified_in_Release_Group__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Computational_Biology,Computational_Finance,Graphics_and_Building_Uis_and_Apps</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Image_Processing_and_Computer_Vision,Math_Statistics_and_Optimization</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>MATLAB_Desktop_and_Environment_TS,Programming_Scripts_and_Functions,Reporting</value>
        </filters>
        <filters>
            <field>Topic_Group__c</field>
            <operation>contains</operation>
            <value>Data_Import_and_Export,Object-Oriented_Programming</value>
        </filters>
        <label>All Unassigned ML/Math</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MW_Tech_Support_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Article_Feedback</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Link__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Comments__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Author_User__c</field>
            <operation>equals</operation>
            <value>My</value>
        </filters>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Rejected</value>
        </filters>
        <label>My Article Feedback</label>
    </listViews>
    <listViews>
        <fullName>Open_Article_Feedback</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Link__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Comments__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>equals</operation>
            <value>New,Assigned,In Progress</value>
        </filters>
        <label>Open Article Feedback</label>
    </listViews>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Article Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>